--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/bg_BG.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/bg_BG.json
@@ -40,6 +40,7 @@
     "TitleLiveTV": "\u0422V \u043d\u0430 \u0436\u0438\u0432\u043e",
     "TitleSync": "Sync",
     "ButtonDonate": "Donate",
+    "HeaderMyMedia": "My Media",
     "TitleNotifications": "\u0418\u0437\u0432\u0435\u0441\u0442\u0438\u044f",
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
