--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -40,6 +40,7 @@
     "TitleLiveTV": "TV ao Vivo",
     "TitleSync": "Sinc",
     "ButtonDonate": "Doar",
+    "HeaderMyMedia": "My Media",
     "TitleNotifications": "Notifica\u00e7\u00f5es",
     "ErrorLaunchingChromecast": "Ocorreu um erro ao iniciar o chromecast. Por favor verifique se seu dispositivo est\u00e1 conectado \u00e0 sua rede sem fio.",
     "MessageErrorLoadingSupporterInfo": "Ocorreu um erro ao carregar a informa\u00e7\u00e3o do colaborador. Por favor, tente novamente mais tarde.",
@@ -388,7 +389,7 @@
     "ButtonMyPreferences": "Minhas Prefer\u00eancias",
     "MessageBrowserDoesNotSupportWebSockets": "Este navegador n\u00e3o suporta web sockets. Para uma melhor experi\u00eancia, tente um navegador mais atual como o Chrome, Firefox, IE10+, Safari (iOS) ou Opera.",
     "LabelInstallingPackage": "Instalando {0}",
-    "LabelPackageInstallCompleted": "Instala\u00e7\u00e3o de {0} completa.",
+    "LabelPackageInstallCompleted": "Instala\u00e7\u00e3o de {0} conclu\u00edda.",
     "LabelPackageInstallFailed": "Instala\u00e7\u00e3o de {0} falhou.",
     "LabelPackageInstallCancelled": "Instala\u00e7\u00e3o de {0} cancelada.",
     "TabServer": "Servidor",
