--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -407,6 +407,7 @@
     "OptionRecordOnAllChannels": "Nehme Programm auf allen Kan\u00e4len auf",
     "OptionRecordAnytime": "Neme Programm zu jeder Zeit auf",
     "OptionRecordOnlyNewEpisodes": "Nehme nur neue Episoden auf",
+    "HeaderRepeatingOptions": "Wiederholungs Einstellungen",
     "HeaderDays": "Tage",
     "HeaderActiveRecordings": "Aktive Aufnahmen",
     "HeaderLatestRecordings": "Neueste Aufnahmen",
@@ -887,9 +888,9 @@
     "LabelHomePageSection2": "Startseite Bereich 2:",
     "LabelHomePageSection3": "Startseite Bereich 3:",
     "LabelHomePageSection4": "Startseite Bereich 4:",
-    "OptionMyViewsButtons": "Meine Ansichten (Tasten)",
-    "OptionMyViews": "Meine Ansichten",
-    "OptionMyViewsSmall": "Meine Ansichten (Klein)",
+    "OptionMyMediaButtons": "Meine Medien (Schaltfl\u00e4chen)",
+    "OptionMyMedia": "Meine Medien",
+    "OptionMyMediaSmall": "Meine Medien (Klein)",
     "OptionResumablemedia": "Wiederhole",
     "OptionLatestMedia": "Neuste Medien",
     "OptionLatestChannelMedia": "Neueste Channel Inhalte:",
@@ -1403,5 +1404,14 @@
     "LabelConversionCpuCoreLimit": "CPU Kerne Limit:",
     "LabelConversionCpuCoreLimitHelp": "Begrenzt die Anzahl der verwendeten CPU Kerne w\u00e4hrend der Konvertierung f\u00fcr die Synchronisation.",
     "OptionEnableFullSpeedConversion": "Aktiviere Hochleistung-Konvertierung.",
-    "OptionEnableFullSpeedConversionHelp": "In der Grundeinstellung wird die Konvertierung f\u00fcr die Synchronisation mit niedriger Geschwindigkeit durchgef\u00fchrt und spart damit System Ressourcen."
+    "OptionEnableFullSpeedConversionHelp": "In der Grundeinstellung wird die Konvertierung f\u00fcr die Synchronisation mit niedriger Geschwindigkeit durchgef\u00fchrt und spart damit System Ressourcen.",
+    "HeaderPlaylists": "Wiedergabeliste",
+    "HeaderSelectDate": "Datum w\u00e4hlen",
+    "HeaderWelcomeExclamation": "Willkommen!",
+    "HeaderMyPreferences": "Meine Einstellungen",
+    "ButtonMyPreferencesWelcomeYes": "Ja, ich m\u00f6chte meine Einstellungen nun festlegen.",
+    "ButtonMyPreferencesWelcomeNo": "Nein danke, das mache ich sp\u00e4ter.",
+    "MyPreferencesWelcomeMessage1": "Wir pr\u00e4sentieren Ihnen Ihre Bibliothek in einer Art, wie wir denken, dass es Ihnen gefallen d\u00fcrfte. Die Darstellung und Gruppierung des Inhaltes kann jederzeit in Ihren Einstellungen angepasst werden. Ihre Einstellungen werden auf alle Empy Apps \u00fcbertragen.",
+    "MyPreferencesWelcomeMessage2": "M\u00f6chten Sie Ihre Einstellungen nun festlegen?",
+    "ToAccessPreferencesHelp": "Um Ihre Einstellungen sp\u00e4ter zu \u00e4ndern, klicken Sie ihr Benutzer-Icon im oberen rechten Bereich oder w\u00e4hlen Sie \"Meine Einstellungen\"."
 }
