--- a/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
@@ -404,9 +404,10 @@
     "ButtonRefresh": "Actualizar",
     "ButtonAdvancedRefresh": "Actualizaci\u00f3n Avanzada",
     "OptionPriority": "Prioridad",
-    "OptionRecordOnAllChannels": "Grabar programa en todos los canales",
-    "OptionRecordAnytime": "Grabar programa en cualquier momento",
+    "OptionRecordOnAllChannels": "Grabar en todos los canales",
+    "OptionRecordAnytime": "Grabar en cualquier momento",
     "OptionRecordOnlyNewEpisodes": "Grabar s\u00f3lo nuevos episodios",
+    "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "D\u00edas",
     "HeaderActiveRecordings": "Grabaciones Activas",
     "HeaderLatestRecordings": "Grabaciones Recientes",
@@ -550,7 +551,7 @@
     "LabelPublicHttpsPort": "N\u00famero de puerto https publico:",
     "LabelPublicHttpsPortHelp": "El n\u00famero de puerto p\u00fablico que deber\u00e1 ser mapeado al puerto local de https.",
     "LabelEnableHttps": "Reportar https como una direcci\u00f3n externa",
-    "LabelEnableHttpsHelp": "Si se habilita, el servidor reportara a los clientes una url https como su direcci\u00f3n externa. Esto podr\u00eda inutilizar a los clientes que aun no soporten https.",
+    "LabelEnableHttpsHelp": "Al habilitarse, el servidor reportara un URL https a los clientes como su direcci\u00f3n externa.",
     "LabelHttpsPort": "N\u00famero de puerto https local:",
     "LabelHttpsPortHelp": "El numero de puerto tcp con el que se deber\u00e1 vincular el servidor https de Emby.",
     "LabelWebSocketPortNumber": "N\u00famero de puerto WebSocket:",
@@ -887,9 +888,9 @@
     "LabelHomePageSection2": "Pagina de Inicio secci\u00f3n dos:",
     "LabelHomePageSection3": "Pagina de Inicio secci\u00f3n tres:",
     "LabelHomePageSection4": "Pagina de Inicio secci\u00f3n cuatro:",
-    "OptionMyViewsButtons": "Mis vistas (botones)",
-    "OptionMyViews": "Mis vistas",
-    "OptionMyViewsSmall": "Mis vistas (peque\u00f1o)",
+    "OptionMyMediaButtons": "My media (buttons)",
+    "OptionMyMedia": "My media",
+    "OptionMyMediaSmall": "My media (small)",
     "OptionResumablemedia": "Continuar",
     "OptionLatestMedia": "Medios recientes",
     "OptionLatestChannelMedia": "Elementos recientes de canales",
@@ -1391,17 +1392,26 @@
     "LabelShowLibraryTileNamesHelp": "Determina si se desplegar\u00e1n etiquetas debajo de los t\u00edtulos de las bibliotecas con la p\u00e1gina principal",
     "OptionEnableTranscodingThrottle": "Habilitar contenci\u00f3n",
     "OptionEnableTranscodingThrottleHelp": "La contenci\u00f3n permite ajustar autom\u00e1ticamente la velocidad de transcodificaci\u00f3n para minimizar la utilizaci\u00f3n del procesador en el servidor durante la reproducci\u00f3n.",
-    "LabelUploadSpeedLimit": "L\u00edmite de velocidad de env\u00edo (mbps):",
+    "LabelUploadSpeedLimit": "L\u00edmite de velocidad de subida (mbps):",
     "OptionAllowSyncTranscoding": "Permitir sincronizaci\u00f3n que requiera de transcodificaci\u00f3n",
     "HeaderPlayback": "Reproducci\u00f3n de Medios",
     "OptionAllowAudioPlaybackTranscoding": "Permitir la reproducci\u00f3n de audio que requiera de transcodificaci\u00f3n",
     "OptionAllowVideoPlaybackTranscoding": "Permitir la reproducci\u00f3n de video que requiera de transcodificaci\u00f3n",
     "OptionAllowMediaPlaybackTranscodingHelp": "Los usuarios recibir\u00e1n mensajes amigables cuando el contenido no pueda ser reproducido de acuerdo a su pol\u00edtica.",
     "TabStreaming": "Transmisi\u00f3n",
-    "LabelRemoteClientBitrateLimit": "Limite de tasa de bits (Mbps) del cliente remoto:",
+    "LabelRemoteClientBitrateLimit": "Limite de tasa de bits para clientes remotos (Mbps):",
     "LabelRemoteClientBitrateLimitHelp": "L\u00edmite opcional en la tasa de bits de transmisi\u00f3n para todos los clientes remotos. Esto es \u00fatil para evitar que los clientes soliciten una tasa de bits mayor a la que su conexi\u00f3n puede soportar.",
-    "LabelConversionCpuCoreLimit": "CPU core limit:",
-    "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
-    "OptionEnableFullSpeedConversion": "Enable full speed conversion",
-    "OptionEnableFullSpeedConversionHelp": "By default sync conversion is performed at a low speed to reduce resource consumption."
+    "LabelConversionCpuCoreLimit": "L\u00edmite de n\u00facleos de CPU:",
+    "LabelConversionCpuCoreLimitHelp": "L\u00edmitar el n\u00famero de n\u00facleos del CPI que ser\u00e1n utilizados durante la conversi\u00f3n de sincronizaci\u00f3n.",
+    "OptionEnableFullSpeedConversion": "Habilitar conversi\u00f3n a m\u00e1xima velocidad",
+    "OptionEnableFullSpeedConversionHelp": "Por defecto, la conversi\u00f3n es realizada a baja velocidad para minimizar el consumo de recursos.",
+    "HeaderPlaylists": "Playlists",
+    "HeaderSelectDate": "Select Date",
+    "HeaderWelcomeExclamation": "Welcome!",
+    "HeaderMyPreferences": "My Preferences",
+    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
+    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
+    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
+    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
+    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
 }
