--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -407,6 +407,7 @@
     "OptionRecordOnAllChannels": "Gravar programa em todos os canais",
     "OptionRecordAnytime": "Gravar programa a qualquer hora",
     "OptionRecordOnlyNewEpisodes": "Gravar apenas novos epis\u00f3dios",
+    "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "Dias",
     "HeaderActiveRecordings": "Grava\u00e7\u00f5es Ativas",
     "HeaderLatestRecordings": "Grava\u00e7\u00f5es Recentes",
@@ -575,7 +576,7 @@
     "HeaderDestination": "Destino",
     "HeaderProgram": "Programa",
     "HeaderClients": "Clientes",
-    "LabelCompleted": "Completa",
+    "LabelCompleted": "Conclu\u00eddo",
     "LabelFailed": "Falhou",
     "LabelSkipped": "Ignorada",
     "HeaderEpisodeOrganization": "Organiza\u00e7\u00e3o do Epis\u00f3dio",
@@ -887,9 +888,9 @@
     "LabelHomePageSection2": "Tela de in\u00edcio se\u00e7\u00e3o 2:",
     "LabelHomePageSection3": "Tela de in\u00edcio se\u00e7\u00e3o 3:",
     "LabelHomePageSection4": "Tela de in\u00edcio se\u00e7\u00e3o 4:",
-    "OptionMyViewsButtons": "Minhas visualiza\u00e7\u00f5es (bot\u00f5es)",
-    "OptionMyViews": "Minhas visualiza\u00e7\u00f5es",
-    "OptionMyViewsSmall": "Minhas visualiza\u00e7\u00f5es (pequeno)",
+    "OptionMyMediaButtons": "My media (buttons)",
+    "OptionMyMedia": "My media",
+    "OptionMyMediaSmall": "My media (small)",
     "OptionResumablemedia": "Retomar",
     "OptionLatestMedia": "M\u00eddias recentes",
     "OptionLatestChannelMedia": "Itens recentes de canal",
@@ -1099,8 +1100,8 @@
     "HeaderActivity": "Atividade",
     "ScheduledTaskStartedWithName": "{0} iniciado",
     "ScheduledTaskCancelledWithName": "{0} foi cancelado",
-    "ScheduledTaskCompletedWithName": "{0} completa",
-    "ScheduledTaskFailed": "Tarefa agendada completa",
+    "ScheduledTaskCompletedWithName": "{0} conclu\u00edda",
+    "ScheduledTaskFailed": "Tarefa agendada conclu\u00edda",
     "PluginInstalledWithName": "{0} foi instalado",
     "PluginUpdatedWithName": "{0} foi atualizado",
     "PluginUninstalledWithName": "{0} foi desinstalado",
@@ -1400,8 +1401,17 @@
     "TabStreaming": "Streaming",
     "LabelRemoteClientBitrateLimit": "Limite de taxa de bits para o cliente remoto (mbps):",
     "LabelRemoteClientBitrateLimitHelp": "Um limite opcional da taxa de bits para todos os clientes remotos. Esta op\u00e7\u00e3o \u00e9 \u00fatil para evitar que os clientes demandem uma taxa de bits maior que a permitida pela sua conex\u00e3o.",
-    "LabelConversionCpuCoreLimit": "CPU core limit:",
-    "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
-    "OptionEnableFullSpeedConversion": "Enable full speed conversion",
-    "OptionEnableFullSpeedConversionHelp": "By default sync conversion is performed at a low speed to reduce resource consumption."
+    "LabelConversionCpuCoreLimit": "Limite de n\u00facleos da CPU:",
+    "LabelConversionCpuCoreLimitHelp": "Limite o n\u00famero de n\u00facleos da CPU que ser\u00e3o usados durante a convers\u00e3o na sincroniza\u00e7\u00e3o",
+    "OptionEnableFullSpeedConversion": "Ativar convers\u00e3o de alta velocidade",
+    "OptionEnableFullSpeedConversionHelp": "Por padr\u00e3o, a convers\u00e3o na sincroniza\u00e7\u00e3o \u00e9 executada em uma velocidade baixa para reduzir o consumo de recursos.",
+    "HeaderPlaylists": "Playlists",
+    "HeaderSelectDate": "Select Date",
+    "HeaderWelcomeExclamation": "Welcome!",
+    "HeaderMyPreferences": "My Preferences",
+    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
+    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
+    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
+    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
+    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
 }
