--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -40,6 +40,7 @@
     "TitleLiveTV": "Live TV",
     "TitleSync": "Synk",
     "ButtonDonate": "Don\u00e9r",
+    "HeaderMyMedia": "My Media",
     "TitleNotifications": "Beskjeder",
     "ErrorLaunchingChromecast": "Det var en feil ved start av Chromecast. Vennligst forsikre deg om at enheten har korrekt forbindelse til ditt tr\u00e5dl\u00f8se nettverk.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
