--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -24,7 +24,7 @@
     "UserProfilesIntro": "Emby supporte nativement les profils utilisateurs, les pr\u00e9f\u00e9rences d'affichage, la sauvegarde de l'\u00e9tat de lecture et le contr\u00f4le parental.",
     "LabelWindowsService": "Service Windows",
     "AWindowsServiceHasBeenInstalled": "Un service Windows a \u00e9t\u00e9 install\u00e9.",
-    "WindowsServiceIntro1": "Le serveur Emby fonctionne comme une application de bureau avec une icone de notification, mais si vous pr\u00e9f\u00e9rer qu'il tourne comme un service en tache de fond, il peut \u00eatre d\u00e9marrer \u00e0 partir du panneau de controle des services windows.",
+    "WindowsServiceIntro1": "Le serveur Emby fonctionne comme une application de bureau avec une icone de notification, mais si vous pr\u00e9f\u00e9rez qu'il tourne comme un service en tache de fond, il peut \u00eatre d\u00e9marrer \u00e0 partir du panneau de controle des services windows.",
     "WindowsServiceIntro2": "Si le service Windows est utilis\u00e9, veuillez noter qu'il ne peut pas fonctionner en m\u00eame temps que l'application dans la barre des t\u00e2ches, vous devrez donc fermer l'application de la barre des t\u00e2ches pour pouvoir ex\u00e9cuter le service. Le service devra aussi \u00eatre configur\u00e9 avec les droits administrateurs via le panneau de configuration. Veuillez noter qu'actuellement, la mise \u00e0 jour automatique du service n'est pas disponible, les mises \u00e0 jour devront donc se faire manuellement.",
     "WizardCompleted": "C'est tout ce dont nous avons besoin pour l'instant. Emby a commenc\u00e9 \u00e0 collecter les informations de votre biblioth\u00e8que de m\u00e9dias. Jetez un oeil \u00e0 quelques unes de nos applications, puis cliquez sur <b>Terminer<\/b> pour consulter le <b>Tableau de bord du serveur<\/b>.",
     "LabelConfigureSettings": "Configurer les param\u00e8tres",
@@ -407,6 +407,7 @@
     "OptionRecordOnAllChannels": "Enregistrer le programme sur toutes les cha\u00eenes",
     "OptionRecordAnytime": "Enregistrer le programme \u00e0 n'importe quelle heure\/journ\u00e9e",
     "OptionRecordOnlyNewEpisodes": "Enregistrer seulement les nouveaux \u00e9pisodes",
+    "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "Jours",
     "HeaderActiveRecordings": "Enregistrements actifs",
     "HeaderLatestRecordings": "Derniers enregistrements",
@@ -887,9 +888,9 @@
     "LabelHomePageSection2": "Seconde section du portail :",
     "LabelHomePageSection3": "Troisi\u00e8me section du portail :",
     "LabelHomePageSection4": "Quatri\u00e8me section du portail:",
-    "OptionMyViewsButtons": "Mes vues (bouttons)",
-    "OptionMyViews": "Mes vues",
-    "OptionMyViewsSmall": "Mes vues (petit)",
+    "OptionMyMediaButtons": "My media (buttons)",
+    "OptionMyMedia": "My media",
+    "OptionMyMediaSmall": "My media (small)",
     "OptionResumablemedia": "Reprendre",
     "OptionLatestMedia": "Les plus r\u00e9cents",
     "OptionLatestChannelMedia": "Items de cha\u00eene les plus r\u00e9cents",
@@ -1394,14 +1395,23 @@
     "LabelUploadSpeedLimit": "D\u00e9bit max d'upload (mbps) :",
     "OptionAllowSyncTranscoding": "Autoriser la synchronisation quand elle n\u00e9cessite un transcodage",
     "HeaderPlayback": "Lecture du m\u00e9dia",
-    "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
-    "OptionAllowVideoPlaybackTranscoding": "Autoriser la lecture de vid\u00e9os n\u00e9cessitant le transcodage",
-    "OptionAllowMediaPlaybackTranscodingHelp": "Les utilisateurs recevront un message d'erreur compr\u00e9hensible lorsque le contenu n'est pas lisible en raison des restrictions appliqu\u00e9es",
+    "OptionAllowAudioPlaybackTranscoding": "Autoriser la lecture de musique n\u00e9cessitant un transcodage",
+    "OptionAllowVideoPlaybackTranscoding": "Autoriser la lecture de vid\u00e9os n\u00e9cessitant un transcodage",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Les utilisateurs recevront un message d'erreur compr\u00e9hensible lorsque le contenu n'est pas lisible en raison des restrictions appliqu\u00e9es.",
     "TabStreaming": "Streaming",
     "LabelRemoteClientBitrateLimit": "Limite de d\u00e9bit du client distant (mbps):",
-    "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle.",
-    "LabelConversionCpuCoreLimit": "Limite de coeur CPU:",
-    "LabelConversionCpuCoreLimitHelp": "Limite le nombre de coeur du processeur utilis\u00e9s pendant la conversion.",
+    "LabelRemoteClientBitrateLimitHelp": "Une limite de d\u00e9bit optionnelle du streaming pour tous les clients distant. Utile pour \u00e9viter que les clients demandent une bande passante sup\u00e9rieure \u00e0 ce que votre connexion peu fournir.",
+    "LabelConversionCpuCoreLimit": "Limite de c\u0153ur CPU:",
+    "LabelConversionCpuCoreLimitHelp": "Limite le nombre de c\u0153ur du processeur utilis\u00e9s pendant le transcodage.",
     "OptionEnableFullSpeedConversion": "Autoriser le transcodage rapide",
-    "OptionEnableFullSpeedConversionHelp": "Par d\u00e9faut, le transcodage est r\u00e9alis\u00e9 de mani\u00e8re lente pour r\u00e9duire la consommation de ressources."
+    "OptionEnableFullSpeedConversionHelp": "Par d\u00e9faut, le transcodage est r\u00e9alis\u00e9 de mani\u00e8re lente pour r\u00e9duire la consommation de ressources.",
+    "HeaderPlaylists": "Playlists",
+    "HeaderSelectDate": "Select Date",
+    "HeaderWelcomeExclamation": "Welcome!",
+    "HeaderMyPreferences": "My Preferences",
+    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
+    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
+    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
+    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
+    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
 }
