--- a/MediaBrowser.Server.Implementations/Localization/Server/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nb.json
@@ -49,9 +49,9 @@
     "ButtonOrganize": "Organiser",
     "LinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderSupporterBenefits": "Supporter Benefits",
-    "HeaderAddUser": "Add User",
+    "HeaderAddUser": "Ny bruker",
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
-    "LabelPinCode": "Pin code:",
+    "LabelPinCode": "Pin kode:",
     "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
     "HeaderSync": "Sync",
     "ButtonOk": "Ok",
@@ -66,8 +66,8 @@
     "TabPlaylist": "Playlist",
     "HeaderEasyPinCode": "Enkel PIN-kode",
     "HeaderGrownupsOnly": "Grown-ups Only!",
-    "DividerOr": "-- or --",
-    "HeaderInstalledServices": "Installed Services",
+    "DividerOr": "-- eller --",
+    "HeaderInstalledServices": "Installerte programtillegg",
     "HeaderAvailableServices": "Available Services",
     "MessageNoServicesInstalled": "No services are currently installed.",
     "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
@@ -407,6 +407,7 @@
     "OptionRecordOnAllChannels": "Ta opptak p\u00e5 alle kanaler",
     "OptionRecordAnytime": "Ta opptak n\u00e5r som helst",
     "OptionRecordOnlyNewEpisodes": "Ta opptak kun av nye episoder",
+    "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "Dager",
     "HeaderActiveRecordings": "Aktive opptak",
     "HeaderLatestRecordings": "Siste opptak",
@@ -887,9 +888,9 @@
     "LabelHomePageSection2": "Hjemme side seksjon 2:",
     "LabelHomePageSection3": "Hjemme side seksjon 3:",
     "LabelHomePageSection4": "Hjemme side seksjon 4:",
-    "OptionMyViewsButtons": "Mitt syn (knapper)",
-    "OptionMyViews": "Mitt syn",
-    "OptionMyViewsSmall": "Mitt Syn (liten)",
+    "OptionMyMediaButtons": "My media (buttons)",
+    "OptionMyMedia": "My media",
+    "OptionMyMediaSmall": "My media (small)",
     "OptionResumablemedia": "Fortsette",
     "OptionLatestMedia": "Siste media",
     "OptionLatestChannelMedia": "Siste kanal elementer",
@@ -1391,17 +1392,26 @@
     "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
     "OptionEnableTranscodingThrottle": "Enable throttling",
     "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
-    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "LabelUploadSpeedLimit": "Upload speed limit (Mbps):",
     "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
     "HeaderPlayback": "Media Playback",
     "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
     "OptionAllowVideoPlaybackTranscoding": "Allow video playback that requires transcoding",
     "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy.",
     "TabStreaming": "Streaming",
-    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (mbps):",
+    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (Mbps):",
     "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle.",
     "LabelConversionCpuCoreLimit": "CPU core limit:",
     "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
     "OptionEnableFullSpeedConversion": "Enable full speed conversion",
-    "OptionEnableFullSpeedConversionHelp": "By default sync conversion is performed at a low speed to reduce resource consumption."
+    "OptionEnableFullSpeedConversionHelp": "By default, sync conversion is performed at a low speed to minimize resource consumption.",
+    "HeaderPlaylists": "Playlists",
+    "HeaderSelectDate": "Select Date",
+    "HeaderWelcomeExclamation": "Welcome!",
+    "HeaderMyPreferences": "My Preferences",
+    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
+    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
+    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
+    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
+    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
 }
