--- a/MediaBrowser.Server.Implementations/Localization/Server/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nl.json
@@ -52,7 +52,7 @@
     "HeaderAddUser": "Gebruiker Toevoegen",
     "LabelAddConnectSupporterHelp": "Om een \u200b\u200bgebruiker toe te voegen die niet in de lijst voorkomt, moet je eerst hun account koppelen aan Emby Connect uit hun gebruikersprofiel pagina.",
     "LabelPinCode": "Pincode:",
-    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "OptionHideWatchedContentFromLatestMedia": "Verberg bekeken inhoud van recent toegevoegd",
     "HeaderSync": "Sync",
     "ButtonOk": "Ok",
     "ButtonCancel": "Annuleren",
@@ -407,6 +407,7 @@
     "OptionRecordOnAllChannels": "Programma van alle kanalen opnemen",
     "OptionRecordAnytime": "Programma elke keer opnemen",
     "OptionRecordOnlyNewEpisodes": "Alleen nieuwe afleveringen opnemen",
+    "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "Dagen",
     "HeaderActiveRecordings": "Actieve Opnames",
     "HeaderLatestRecordings": "Nieuwe Opnames",
@@ -887,9 +888,9 @@
     "LabelHomePageSection2": "Startpagina sectie 2:",
     "LabelHomePageSection3": "Startpagina sectie 3:",
     "LabelHomePageSection4": "Startpagina sectie 4:",
-    "OptionMyViewsButtons": "Mijn overzichten (knoppen)",
-    "OptionMyViews": "Mijn overzichten",
-    "OptionMyViewsSmall": "Mijn overzichten (klein)",
+    "OptionMyMediaButtons": "My media (buttons)",
+    "OptionMyMedia": "My media",
+    "OptionMyMediaSmall": "My media (small)",
     "OptionResumablemedia": "Hervatten",
     "OptionLatestMedia": "Nieuwste media",
     "OptionLatestChannelMedia": "Nieuwste kanaal items",
@@ -1384,24 +1385,33 @@
     "LabelEnableInternetMetadataForTvPrograms": "Download internet metadata voor:",
     "OptionTVMovies": "TV Movies",
     "HeaderUpcomingMovies": "Aankomende Films",
-    "HeaderUpcomingSports": "Upcoming Sports",
+    "HeaderUpcomingSports": "Sport binnenkort",
     "HeaderUpcomingPrograms": "Aankomende Programma's",
     "ButtonMoreItems": "Meer...",
     "LabelShowLibraryTileNames": "Toon bibliotheek tegel namen",
     "LabelShowLibraryTileNamesHelp": "Bepaalt of labels onder de bibliotheek tegels zullen worden weergegeven op de startpagina",
-    "OptionEnableTranscodingThrottle": "Enable throttling",
-    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
-    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
-    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
-    "HeaderPlayback": "Media Playback",
-    "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
-    "OptionAllowVideoPlaybackTranscoding": "Allow video playback that requires transcoding",
-    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy.",
+    "OptionEnableTranscodingThrottle": "Throtteling inschakelen",
+    "OptionEnableTranscodingThrottleHelp": "Throtteling zal automatisch de snelheid van het transcoderen aanpassen om de cpu belasting laag te houden tijdens het afspelen.",
+    "LabelUploadSpeedLimit": "Upload limiet (mbps):",
+    "OptionAllowSyncTranscoding": "Sta synchronisatie toe die transcodering vereist",
+    "HeaderPlayback": "Media afspelen",
+    "OptionAllowAudioPlaybackTranscoding": "Sta het afspelen van audio wat transcoding vereist toe",
+    "OptionAllowVideoPlaybackTranscoding": "Sta het afspelen van video wat transcoding vereist toe",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Gebruikers zullen een bericht ontvangen als afspelen niet is toegestaan op basis van het beleid",
     "TabStreaming": "Streaming",
-    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (mbps):",
-    "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle.",
-    "LabelConversionCpuCoreLimit": "CPU core limit:",
-    "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
-    "OptionEnableFullSpeedConversion": "Enable full speed conversion",
-    "OptionEnableFullSpeedConversionHelp": "By default sync conversion is performed at a low speed to reduce resource consumption."
+    "LabelRemoteClientBitrateLimit": "Client bitrate limiet (mbps):",
+    "LabelRemoteClientBitrateLimitHelp": "Een optionele streaming bitrate limiet voor alle clients. Dit wordt gebruikt om te voorkomen dat clients een hogere bitrate aanvragen dan de internet connectie kan leveren.",
+    "LabelConversionCpuCoreLimit": "CPU core limiet:",
+    "LabelConversionCpuCoreLimitHelp": "Limiteer het aantal CPU cores wat gebruikt mag worden bij een omzetteing om te synchroniseren.",
+    "OptionEnableFullSpeedConversion": "Schakel hoge converteren op hoge snelheid in",
+    "OptionEnableFullSpeedConversionHelp": "Standaard wordt het converteren voor synchronisatie opdrachten op lage snelheid uitgevoerd zodat er weinig impact is op de server.",
+    "HeaderPlaylists": "Playlists",
+    "HeaderSelectDate": "Select Date",
+    "HeaderWelcomeExclamation": "Welcome!",
+    "HeaderMyPreferences": "My Preferences",
+    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
+    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
+    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
+    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
+    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
 }
