--- a/MediaBrowser.Server.Implementations/Localization/Server/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/sv.json
@@ -407,6 +407,7 @@
     "OptionRecordOnAllChannels": "Spela in fr\u00e5n alla kanaler",
     "OptionRecordAnytime": "Spela in vid alla tidpunkter",
     "OptionRecordOnlyNewEpisodes": "Spela bara in nya avsnitt",
+    "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "Dagar",
     "HeaderActiveRecordings": "P\u00e5g\u00e5ende inspelningar",
     "HeaderLatestRecordings": "Senaste inspelningarna",
@@ -550,7 +551,7 @@
     "LabelPublicHttpsPort": "Public https port number:",
     "LabelPublicHttpsPortHelp": "The public port number that should be mapped to the local https port.",
     "LabelEnableHttps": "Report https as external address",
-    "LabelEnableHttpsHelp": "If enabled, the server will report an https url to clients as it's external address. This may break clients that do not yet support https.",
+    "LabelEnableHttpsHelp": "If enabled, the server will report an https url to clients as it's external address.",
     "LabelHttpsPort": "Local https port number:",
     "LabelHttpsPortHelp": "The tcp port number that Emby's https server should bind to.",
     "LabelWebSocketPortNumber": "Webanslutningens portnummer:",
@@ -887,9 +888,9 @@
     "LabelHomePageSection2": "Startsidans sektion 2:",
     "LabelHomePageSection3": "Startsidans sektion 3:",
     "LabelHomePageSection4": "Startsidans sektion 4:",
-    "OptionMyViewsButtons": "Mina vyer (knappar)",
-    "OptionMyViews": "Mina vyer",
-    "OptionMyViewsSmall": "Mina vyer (liten)",
+    "OptionMyMediaButtons": "My media (buttons)",
+    "OptionMyMedia": "My media",
+    "OptionMyMediaSmall": "My media (small)",
     "OptionResumablemedia": "\u00c5teruppta",
     "OptionLatestMedia": "Nytillkommet",
     "OptionLatestChannelMedia": "Senaste objekten i Kanaler",
@@ -1391,17 +1392,26 @@
     "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
     "OptionEnableTranscodingThrottle": "Enable throttling",
     "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
-    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "LabelUploadSpeedLimit": "Upload speed limit (Mbps):",
     "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
     "HeaderPlayback": "Media Playback",
     "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
     "OptionAllowVideoPlaybackTranscoding": "Allow video playback that requires transcoding",
     "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy.",
     "TabStreaming": "Streaming",
-    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (mbps):",
+    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (Mbps):",
     "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle.",
     "LabelConversionCpuCoreLimit": "CPU core limit:",
     "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
     "OptionEnableFullSpeedConversion": "Enable full speed conversion",
-    "OptionEnableFullSpeedConversionHelp": "By default sync conversion is performed at a low speed to reduce resource consumption."
+    "OptionEnableFullSpeedConversionHelp": "By default, sync conversion is performed at a low speed to minimize resource consumption.",
+    "HeaderPlaylists": "Playlists",
+    "HeaderSelectDate": "Select Date",
+    "HeaderWelcomeExclamation": "Welcome!",
+    "HeaderMyPreferences": "My Preferences",
+    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
+    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
+    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
+    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
+    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
 }
