--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
@@ -407,6 +407,7 @@
     "OptionRecordOnAllChannels": "\u5f55\u5236\u6240\u6709\u9891\u9053",
     "OptionRecordAnytime": "\u5f55\u5236\u6240\u6709\u65f6\u6bb5",
     "OptionRecordOnlyNewEpisodes": "\u53ea\u5f55\u5236\u65b0\u5267\u96c6",
+    "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "\u5929",
     "HeaderActiveRecordings": "\u6b63\u5728\u5f55\u5236\u7684\u8282\u76ee",
     "HeaderLatestRecordings": "\u6700\u65b0\u5f55\u5236\u7684\u8282\u76ee",
@@ -550,7 +551,7 @@
     "LabelPublicHttpsPort": "Public https port number:",
     "LabelPublicHttpsPortHelp": "The public port number that should be mapped to the local https port.",
     "LabelEnableHttps": "Report https as external address",
-    "LabelEnableHttpsHelp": "If enabled, the server will report an https url to clients as it's external address. This may break clients that do not yet support https.",
+    "LabelEnableHttpsHelp": "If enabled, the server will report an https url to clients as it's external address.",
     "LabelHttpsPort": "Local https port number:",
     "LabelHttpsPortHelp": "The tcp port number that Emby's https server should bind to.",
     "LabelWebSocketPortNumber": "Web Socket\u7aef\u53e3\u53f7\uff1a",
@@ -887,9 +888,9 @@
     "LabelHomePageSection2": "\u9996\u9875\u7b2c2\u533a\uff1a",
     "LabelHomePageSection3": "\u9996\u9875\u7b2c3\u533a\uff1a",
     "LabelHomePageSection4": "\u9996\u9875\u7b2c4\u533a\uff1a",
-    "OptionMyViewsButtons": "\u6211\u7684\u754c\u9762(\u6309\u94ae)",
-    "OptionMyViews": "\u6211\u7684\u754c\u9762",
-    "OptionMyViewsSmall": "\u6211\u7684\u754c\u9762 (\u5c0f)",
+    "OptionMyMediaButtons": "My media (buttons)",
+    "OptionMyMedia": "My media",
+    "OptionMyMediaSmall": "My media (small)",
     "OptionResumablemedia": "\u6062\u590d\u64ad\u653e",
     "OptionLatestMedia": "\u6700\u65b0\u5a92\u4f53",
     "OptionLatestChannelMedia": "\u6700\u65b0\u9891\u9053\u9879\u76ee",
@@ -1391,17 +1392,26 @@
     "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
     "OptionEnableTranscodingThrottle": "Enable throttling",
     "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
-    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "LabelUploadSpeedLimit": "Upload speed limit (Mbps):",
     "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
     "HeaderPlayback": "Media Playback",
     "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
     "OptionAllowVideoPlaybackTranscoding": "Allow video playback that requires transcoding",
     "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy.",
     "TabStreaming": "Streaming",
-    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (mbps):",
+    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (Mbps):",
     "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle.",
     "LabelConversionCpuCoreLimit": "CPU core limit:",
     "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
     "OptionEnableFullSpeedConversion": "Enable full speed conversion",
-    "OptionEnableFullSpeedConversionHelp": "By default sync conversion is performed at a low speed to reduce resource consumption."
+    "OptionEnableFullSpeedConversionHelp": "By default, sync conversion is performed at a low speed to minimize resource consumption.",
+    "HeaderPlaylists": "Playlists",
+    "HeaderSelectDate": "Select Date",
+    "HeaderWelcomeExclamation": "Welcome!",
+    "HeaderMyPreferences": "My Preferences",
+    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
+    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
+    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
+    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
+    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
 }
